---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
// Iteration over nested lists
let list = [[1, 2], [3, 4], [5, 6]]
let iter = list_iter(list)

assert_eq(iter(), [1, 2])
assert_eq(iter(), [3, 4])
assert_eq(iter(), [5, 6])
assert_eq(iter(), nil)

ERROR
assertion failed: cannot compare types (List, List)
6 |  assert_eq(iter(), [1, 2])
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^


DISASM:

.fn @main
  params 0
  stack 5
  .code
   0  llist r1, 3
   1  llist r2, 2
   2  lsmi r3, 1
   3  sidxn r2, 0, r3
   4  lsmi r3, 2
   5  sidxn r2, 1, r3
   6  sidxn r1, 0, r2
   7  llist r2, 2
   8  lsmi r3, 3
   9  sidxn r2, 0, r3
  10  lsmi r3, 4
  11  sidxn r2, 1, r3
  12  sidxn r1, 1, r2
  13  llist r2, 2
  14  lsmi r3, 5
  15  sidxn r2, 0, r3
  16  lsmi r3, 6
  17  sidxn r2, 1, r3
  18  sidxn r1, 2, r2
  19  smvar m1, r1
  20  lmvar r2, m1
  21  call r1, list_iter
  22  smvar m0, r1
  23  lmvar r2, m0
  24  call r2, r2, 0   ; dyn
  25  llist r3, 2
  26  lsmi r4, 1
  27  sidxn r3, 0, r4
  28  lsmi r4, 2
  29  sidxn r3, 1, r4
  30  call r1, assert_eq
  31  lmvar r2, m0
  32  call r2, r2, 0   ; dyn
  33  llist r3, 2
  34  lsmi r4, 3
  35  sidxn r3, 0, r4
  36  lsmi r4, 4
  37  sidxn r3, 1, r4
  38  call r1, assert_eq
  39  lmvar r2, m0
  40  call r2, r2, 0   ; dyn
  41  llist r3, 2
  42  lsmi r4, 5
  43  sidxn r3, 0, r4
  44  lsmi r4, 6
  45  sidxn r3, 1, r4
  46  call r1, assert_eq
  47  lmvar r1, m0
  48  call r1, r1, 0   ; dyn
  49  lnil r2
  50  call r0, assert_eq
  51  ret
